Created and linked session context. Now credentials need to be stored before requesting login to api.

--- a/ls-desktop-client/app/containers/AppHeader/AppHeader.css
+++ b/ls-desktop-client/app/containers/AppHeader/AppHeader.css
@@ -7,4 +7,10 @@
   display: block;
   font-size: 28px;
   font-family: Arial;
+  padding: 8px;
+}
+.loginButton{
+  float: right;
+  line-height: 55px;
+  vertical-align: middle;
 }
